--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post Create</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+{% block title %}
+Post Create
+{% endblock %}
 
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-</form>
+{% block content %}
 
-</body>
-</html>
+<div style="margin: 0 auto" class="col-6">
+    <form method="post">{% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">Создать</button>
+    </form>
+</div>
+
+{% endblock %}
+
