--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,44 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Post Detail</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
 
-<!--Навигация-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'post_list' %}">Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="{% url 'post_list' %}">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </div>
-        </div>
-    </div>
-</nav>
+{% block title %}
+Подробнее
+{% endblock %}
 
+{% block content %}
 <div style="text-align: center; margin: 20px 0;">
     <a class="btn btn-secondary" href="{% url 'post_list' %}"
        style="text-decoration: none;margin: 5px;font-size: 15px; border-radius: 20px; padding: 10px 15px;">
-        Back to posts
+        Назад
     </a>
     <a class="btn btn-danger" href="{% url 'post_delete' post_pk=post.pk %}"
        style="text-decoration: none;margin: 5px;font-size: 15px; border-radius: 20px; padding: 10px 15px;">
-        Delete
+        Удалить
     </a>
     <a class="btn btn-primary" href="{% url 'post_edit' post_pk=post.pk %}"
        style="text-decoration: none;margin: 5px;font-size: 15px; border-radius: 20px; padding: 10px 15px;">
-        Edit post
+        Редактировать
     </a>
 </div>
 
@@ -53,13 +31,4 @@
         {{ post.text }}
     </p>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-
-</body>
-</html>
+{% endblock %}
