--- a/blog/templates/blog/register.html
+++ b/blog/templates/blog/register.html
@@ -1,43 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Регистрация</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
 
-<div class="container">
+{% block title %}
+Регистрация
+{% endblock %}
+{% block content %}
 
 
-    <h1 style="text-align: center">Регистрация</h1>
+<h1 style="text-align: center">Регистрация</h1>
 
-    <div style="text-align: center; margin: 20px 0;">
-
-    </div>
-    <div class="col-4">
-        <form method="post">{% csrf_token %}
-            {{ form.as_p }}
-            <div style="display: flex"></div>
-            <button class="btn btn-primary" type="submit">Создать</button>
-            <a class="btn btn-secondary" href="{% url 'post_list' %}"
-               style="text-decoration: none;margin-left: 10px;">
-                Назад
-            </a>
-        </form>
-
-    </div>
+<div style="text-align: center; margin: 20px 0;">
 
 </div>
+<div class="col-4">
+    <form method="post">{% csrf_token %}
+        {{ form.as_p }}
+        <div style="display: flex"></div>
+        <button class="btn btn-primary" type="submit">Создать</button>
+        <a class="btn btn-secondary" href="{% url 'post_list' %}"
+           style="text-decoration: none;margin-left: 10px;">
+            Назад
+        </a>
+    </form>
 
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-
-</body>
-</html>
+</div>
+{% endblock %}
